--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script type="text/javascript" src="main.js"></script>
     </head>
     <body>
-        <script type="py" src="./main.py" config="./pyscript.json" target="output"></script>
+        <script type="py" src="./main.py" config="./pyscript.json" target="output" terminal></script>
         <div id="toast">
             <div id="toast-logo">
                 <div class="lds-ripple"><div></div><div></div></div>
@@ -26,7 +26,7 @@
                     <div class="name">Dataset Characteristics</div>
                     <div>
                         <label class="switch">
-                            <input id="custom-dataset-input" type="checkbox" onclick="updateDatasetInputData(this.checked);" checked>
+                            <input id="preset-dataset-input" type="checkbox" onclick="updateDatasetInputData(this.checked);" checked>
                             <span class="slider round"></span>
                         </label>
                         <span>Preset datasets</span>
