Added Pima Diabetes Dataset

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         <div id="mode-preset" class="parameter">
                             <div class="name">Preset Dataset</div>
                             <select id="input-dataset-preset" onchange="updateDefaultParameters(this.value)"/>
-                                <option value="wisconsin">Wisconsin Breast Cancer</option>
-                                <option value="pima">Pima Indians Diabetes</option>
-                                <option value="indian">Indian Liver Patient Records</option>
-                                <option value="oxford">Oxford Parkinson's Disease</option>
+                                <option value="breast">Wisconsin Breast Cancer</option>
+                                <option value="diabetes">Pima Indians Diabetes</option>
+                                <option value="liver">Indian Liver Patient Records</option>
+                                <option value="parkinsons">Oxford Parkinson's Disease</option>
                                 <option value="cervical">Cervical Cancer Risk Classification</option>
                             </select>
                         </div>
