Added heart attack and Indian liver datasets

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                                 <option value="liver">Indian Liver Patient Records</option>
                                 <option value="parkinsons">Oxford Parkinson's Disease</option>
                                 <option value="cervical">Cervical Cancer Risk Classification</option>
+                                <option value="heart">Heart Attack Risk Prediction</option>
                             </select>
                         </div>
                     </div>
