--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="parameter-group">
-                    <div class="parameter">
+                    <div class="parameter" style="display: none;">
                         <div class="name">Labels/Centers</div>
                         <input id="input-centers" type="number" placeholder="Labels/Centers" min="2" value="2"/>
                     </div>
@@ -114,7 +114,7 @@
                         <div class="name">Test/Train Ratio</div>
                         <input id="input-test-train-ratio" type="number" placeholder="Test/Train Ratio" step="0.05" min="0.00" max="1.00" value="0.2"/>
                     </div>
-                    <div class="parameter">
+                    <div class="parameter" style="display: none;">
                         <div class="name">Classification Runs</div>
                         <input id="input-test-runs" type="number" placeholder="Classification Runs" min="1" value="1000"/>
                     </div>
@@ -128,6 +128,25 @@
                     </div>
                 </div>
                 <button py-click="run_simulation" id="run-simulation" onclick="runSimulation(this);">Run Simulation</button>
+            </div>
+        </div>
+        <h1>Summary</h1>
+        <div class="wrapper output">
+            <div class="table-summary"></div>
+            <div id="summarized-output-skeleton" class="skeleton container" style="width: 100%; height: 15ch;"></div>
+            <div id="summarized-output" class="table-output" style="display: none;">
+                <div class="table-output-row heading">
+                    <div>Balancing Method</div>
+                    <div>Accuracy</div>
+                    <div>Sensitivity</div>
+                    <div>Specificity</div>
+                    <div>Precision</div>
+                    <div>F1-Score</div>
+                    <div>G-mean</div>
+                </div>
+                <div id="summarized-output-imbalanced" class="table-output-row"></div>
+                <div id="summarized-output-existing-smote" class="table-output-row"></div>
+                <div id="summarized-output-heron-centroid-smote" class="table-output-row"></div>
             </div>
         </div>
         <h1>Information</h1>
@@ -147,25 +166,6 @@
                     </div>
                 </div>
                 <div id="classification-info-output" class="table-output"></div>
-            </div>
-        </div>
-        <h1>Summary</h1>
-        <div class="wrapper output">
-            <div class="table-summary"></div>
-            <div id="summarized-output-skeleton" class="skeleton container" style="width: 100%;"></div>
-            <div id="summarized-output" class="table-output" style="display: none;">
-                <div class="table-output-row heading">
-                    <div>Balancing Method</div>
-                    <div>Accuracy</div>
-                    <div>Sensitivity</div>
-                    <div>Specificity</div>
-                    <div>Precision</div>
-                    <div>F1-Score</div>
-                    <div>G-mean</div>
-                </div>
-                <div id="summarized-output-imbalanced" class="table-output-row"></div>
-                <div id="summarized-output-existing-smote" class="table-output-row"></div>
-                <div id="summarized-output-heron-centroid-smote" class="table-output-row"></div>
             </div>
         </div>
         <h1>Output</h1>
