--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                         <div class="name">Test/Train Ratio</div>
                         <input id="input-test-train-ratio" type="number" placeholder="Test/Train Ratio" step="0.05" min="0.00" max="1.00" value="0.2"/>
                     </div>
+                    <div class="parameter">
+                        <div class="name">Amount of Data Points</div>
+                        <input id="input-data-points" type="number" placeholder="Data Points" min="5" value="569" max="569"/>
+                    </div>
                     <div class="parameter" style="display: none;">
                         <div class="name">Classification Runs</div>
                         <input id="input-test-runs" type="number" placeholder="Classification Runs" min="1" value="1000"/>
