Added temporary styling to main page
This avoids light mode flashbang. Temporarily uses the Heron-Centroid SMOTE Algorithm application stylesheet.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/heron-centroid-smote/heron-centroid-smote.css"/>
         <title>Taruyroiii's Portfolio</title>
     </head>
     <body>
-        <div style="padding: 20px;">
         <h1>Taruyroiii's Portfolio</h1>
-        <hr>
+        <div class="wrapper" style="flex-direction: column;">
         <p>Hi! This page is currently undergoing some necessary changes. This page will not look like this for long, I PROMISE!</p>
         <p>Anyway, this page will serve as my temporary portfolio, and any works that I've done or collaborated with will be posted here.</p>
-        <p>If you're here for the thesis application for the paper <b>"AN ENHANCEMENT OF SMOTE ALGORITHM APPLIED IN AN INTELLIGENT SYSTEM FOR MEDICAL DIAGNOSIS"</b>, feel free to click the link below:</p>
-        <a href="/heron-centroid-smote/index.html">HERON-CENTROID SMOTE</a>
+        <p>If you're here for the thesis application for the paper <b>"AN ENHANCEMENT OF SMOTE ALGORITHM APPLIED IN AN INTELLIGENT SYSTEM FOR MEDICAL DIAGNOSIS"</b>, feel free to click the button below:</p>
+        <a href="/heron-centroid-smote/main.html"><button>HERON-CENTROID SMOTE</button></a>
         </div>
     </body>
 </html>
