Added main styling of temporary portfolio
Other pages are not yet existent. Though, some works are displayed for viewing.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,75 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/heron-centroid-smote/heron-centroid-smote.css"/>
+        <link rel="stylesheet" href="main.css"/>
+        <link rel="icon" href="icon.ico"/>
+        <script src="script.js"></script>
         <title>Taruyroiii's Portfolio</title>
     </head>
     <body>
-        <h1>Taruyroiii's Portfolio</h1>
-        <div class="wrapper" style="flex-direction: column;">
-        <p>Hi! This page is currently undergoing some necessary changes. This page will not look like this for long, I PROMISE!</p>
-        <p>Anyway, this page will serve as my temporary portfolio, and any works that I've done or collaborated with will be posted here.</p>
-        <p>If you're here for the thesis application for the paper <b>"AN ENHANCEMENT OF SMOTE ALGORITHM APPLIED IN AN INTELLIGENT SYSTEM FOR MEDICAL DIAGNOSIS"</b>, feel free to click the button below:</p>
-        <a href="/heron-centroid-smote/main.html"><button>HERON-CENTROID SMOTE</button></a>
+        <div id="header">
+            <div>
+                <img src="icon.ico"/ style="height: 2em;">
+                <div style="margin-left: 1em; font-weight: 800; line-height: 2em;">
+                    Taruyroiii
+                </div>
+            </div>
+            <div id="navigation">
+                <div class="nav-item">About Me</div>
+                <div class="nav-item">My Résumé</div>
+                <div class="nav-item">My Works</div>
+                <div class="nav-item">Contact Me</div>
+            </div>
+        </div>
+        <div id="front-cover">
+            <div id="front-feature"><img src="icon.ico"/ style="height: 10em;"></div>
+            <div id="front-greeting">Hi! I am Roi!<br>Welcome to my abode!</div>
+        </div>
+        <div id="front-notice">
+            Hi! This page will serve as my temporary portfolio, and any works that I've done or collaborated with will be posted here.
+            <br>
+            <b>Thanks for visiting!</b>
+        </div>
+        <div class="main-body">
+            <div class="content-group">
+                <div class="heading">Undergraduate Thesis</div>
+                <div class="content">
+                    <div class="content-image"><img src="assets/heron-centroid-smote-preview.png"/></div>
+                    <div class="content-text">
+                        <div class="title">An Enhancement of SMOTE Algorithm Applied in an Intelligent System for Medical Diagnosis</div>
+                        <div class="description">This is an undergraduate thesis published in May 2024 locally in Pamantasan ng Lungsod ng Maynila; and ACM on September 2024 through ICEMT '24: Proceedings of the 2024 8th International Conference on Education and Multimedia Technology. </div>
+                        <a href="https://doi.org/10.1145/3678726.3678771" class="button">Read Research-Article</a>
+                        <a href="heron-centroid-smote/main.html" class="button">View Prototype</a>
+                    </div>
+                </div>
+            </div>
+            <div class="content-group"> 
+                <div class="heading">Minecraft Works</div>
+                <div class="content">
+                    <div class="content-image"><img src="assets/super-furious-lucky-block-preview.png"/></div>
+                    <div class="content-text">
+                        <div class="title">Super Furious Lucky Block Data Pack</div>
+                        <div class="description">A passion project of mine, which is a data pack for Minecraft 1.19.x and is one of the best lucky block data packs that are currently available on recent Minecraft versions. Due to recent frequent changes in data packs in Minecraft 1.20.6 and 1.21, it will eventually be updated.</div>
+                        <a href="https://www.planetminecraft.com/data-pack/super-furious-lucky-block-for-minecraft-1-14-4/" class="button">Visit PlanetMinecraft Page</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="content-image"><img src="assets/random-villager-names-preview.png"/></div>
+                    <div class="content-text">
+                        <div class="title">Random Village and Villager Names Data Pack</div>
+                        <div class="description">A data pack that tested my ability to randomize vowels and consonants to make "believable-sounding" names (while also integrating real-world name combinations). In vanilla Minecraft, villagers and villages lack names. As a fan of role-playing games, I made this data pack to improve integrating yourself to the Minecraft world as you can encounter more than a billion villagers with different names!</div>
+                        <a href="https://www.planetminecraft.com/data-pack/random-village-and-villager-names-data-pack/" class="button">Visit PlanetMinecraft Page</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="content-image"><img src="assets/gachacraft-preview.png"/></div>
+                    <div class="content-text">
+                        <div class="title">GachaCraft Data Pack (Gacha/Loot Box System)</div>
+                        <div class="description">A short passion project of mine where I tried to overhaul how you play Minecraft; I integrated loot boxes or a gacha system into Minecraft. This features different "banners" or events that you can summon items from, and the more you pull, the better items you get through the pity system.</div>
+                        <a href="https://www.planetminecraft.com/data-pack/gachacraft-data-pack/" class="button">Visit PlanetMinecraft Page</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
